Making both protocol producer hold an (array) deque